src/App.css
/* ... */
.card-block {
  margin-left: 20px;
  margin-right: 20px;
}

.cart-item {
  width: 400px;
  margin-top: 5px;
  margin-bottom: 5px;
  color: gray;
  font-weight: bold;
  font-size: 13px;
}

.cart-modal {
  color: gray;
  width: 86.5%;
  margin-left: 10%;
}

.filterbox {
  width: 95%;
  margin-left: 20px;
  margin-right: 0;
  margin-bottom: 30px;
  border: none;
  border-left: solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
}

.inventory-page {
  margin-right: 20px;
}

.modal-body.padded {
  margin-top: 30px;
}

.confirmation-popup {
  padding-top: 200px;
}

.confirmation-dialog {
  width: 400px;
  font-size: 15px;
  font-weight: normal;
}

.alert {
  margin-left: 10px;
}

.request-detail-title {
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.add-to-cart {
  margin-top: 40%;
}

.add-to-cart-icon {
  margin-left: -40%;
  margin-right: 20%;
  height: 15px;
}

.perpage-button {
  width: 170px;
  margin-left: 2.69%!important;
}

.cart-checkbox {
  margin-left: 2%;
  margin-top: 0;
}

.cart-quantity-box {
  width: 30%;
  height: 30px;
  font-size: 100%;
}

.cart-quantity-label {
  margin-top: 0.2%;
  margin-right: 2%;
}

.cart-update-button {
  margin-top: 1.5%;
}

.user-select-box {
  margin-bottom: 2.5%;
  margin-top: 0.5%;
}

.date-select {
  margin: 8%;
}

.date-card {
  height: 300px;
  max-width: 250px;
  margin-left: 1%;
  margin-top: 15px;
  border: none;
  border-left: solid;
  border-color: rgba(0,150,255,1);
  border-width: 4px;
}

.email-header {
  margin-top: 15px;
  margin-left: 15px;
  min-width: 70%;
}

.email-apply {
  width: 100%;
}

.email-box {
  margin-left: 15px;
}

.email-text {
  max-height: 200px!important;
  background-color: white;
  min-width: 100%;
  padding: 2%;
}

.email-subject-header {
  margin-top: 15px;
  margin-left: 15px;
  max-width: 60%;
}

.email-subject-text {
  background-color: white;
  min-width: 100%;
  padding-left: 1%;
  padding-right: 1%;
  margin-bottom: 5px;
}

.description {
  float: left;
  padding-left: 0.3%;
  color: black;
}

.backfill-rejected {
  text-align: center;
  color: red;
  font-size: 12px;
  font-weight: bold;
  padding: 3px;
  padding-left: 5px;
  padding-right: 5px;
  border: solid;
  border-color: red;
  border-width: 1px;
  margin-left: 3%;
}

.loan-comment-button {
  position: absolute;
  right: 0;
  top: 0;
}

.loan-details {
  white-space: pre-wrap;
}

.loantable-constrained {
  max-width: 100%;
}

.loan-status-dropdown {
  margin-right: 3%;
  margin-left: -0.9%;
}

.loantable-button {
  margin-right: 3%;
}

.loantable-button-2 {
  margin-left: 10%;
}

.loan-control-bar {
  width: 260px!important;
}

.loan-control-bar-2 {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  max-width: 100%;
}

.loan-control-bar-3 {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  min-width: 400px;
}

.loan-control-bar-container {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  margin-right: -200px;
  width: 600px;
}

.request-control-bar {
  width: 300px;
}

.loan-table {
  margin-left: 2.5%;
  margin-bottom: 4%;
  max-width: 95%;
  border:none;
  border-left:solid;
  border-width: 4px;
  border-color: rgba(0,150,255,1);
  font-size: 85%;
  color: gray;
}

.loan-table-mini {
  margin-left: 4%;
  min-width: 98%;
}

.tooltip-inner {
  background-color: rgba(80,80,80,1)!important;
  border-left:solid;
  border-color: rgba(0,150,255,1);
  color: white;
  white-space: pre-wrap;
  text-align: left;
}

.custom-field-buttons {
  margin-top: -3%;
}

.customfield-apply {
  position: absolute;
  right: 0;
}

.custom-field-buttons > button{
  margin-right: 3%;
}

.customfield-maker-isprivate {
  margin-left: 0.35%;
  margin-bottom: -3%;
}

.customfield-maker-checkbox {
  margin-left: 3%;
}

.customfield-item {
  margin-bottom: 4%;
}

.button-space {
  margin-right: 5px;
}
.customfield-editor-modal {
  max-width: 86.5%;
  margin-left: 10%;
  color: gray;
}

.min-qty-modal {
  color: gray;
}

.page-link {
  background-color: white!important;
  color: rgba(0,120,255,1)!important;
  margin-top: 1px;
}

.page-link:hover {
  background-color: rgba(255,255,255, 0.7)!important;
}

.docs-glyph{
  font-size:60px;
  display:inline-block;
}

.docs-glyph > span {
  margin-right:30px;
}

.docs-title{
  display:inline-block;
}
 .docs-row{
   padding-bottom:3%;
 }

.table > tbody > tr > td {
  vertical-align: middle;
}

.table > thead > tr > th {
  vertical-align: middle;
}

thead {
  color: black;
}

tbody {
  color: gray;
}

a {
  text-decoration: none!important;
  outline: none;
}

a.inventory-row-clickable {
    display: block;
    width: 100%;
    height: 100%;
    text-decoration: none!important;
    color: gray;
}

a.inventory-row-clickable:hover {
  color: gray;
}

body {
    background-color: rgba(0,0,0,0.25);
}

button {
    font-family: 'Open Sans';
    font-weight: bold;
    font-size: 13px;
    padding: 8px 16px;
}

